--- a/build.gradle
+++ b/build.gradle
@@ -1,48 +1,25 @@
-plugins {
-    id 'com.android.application'
-    id 'com.google.gms.google-services'
-}
-
-android {
-    compileSdkVersion 33
-    buildToolsVersion "30.0.3"
-
-    defaultConfig {
-        applicationId "com.tps.gsocbms"
-        minSdkVersion 21
-        targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables.useSupportLibrary = true
-
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.4.1'
+        classpath 'com.google.gms:google-services:4.3.15'
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
-dependencies {
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        mavenCentral() // Warning: this repository is going to shut down soon
+    }
+}
 
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-database:20.1.0'
-    implementation 'com.google.firebase:firebase-auth:21.1.0'
-    implementation 'com.google.firebase:firebase-firestore:24.4.2'
-    implementation 'com.google.firebase:firebase-storage:20.1.0'
-    testImplementation 'junit:junit:'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
-    testImplementation 'org.testng:testng:6.9.6'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
